# cmake-hello-world

./: CMakeLists.txt  FactorialCalc.cpp  README.md  SquareRootCalc.cpp  SquareRootCalcConfig.h.in  main.cpp  test.cpp
.github/workflows/: build_and_test.yml  ubuntu.yml
DummyMathFunctions/: CMakeLists.txt  DummyMathFunctions.cpp  DummyMathFunctions.h  mysqrt.cpp
tests/: test_factorial.cpp  test_sqrt.cpp
